Changelog for DimensionDoor (v2.1.1-SNAPSHOT)

2012-07-31 16:36:26 +0100    add toString - add forgotten fields (James Richardson)
2012-07-31 15:44:41 +0100    add default configuration (James Richardson)
2012-07-31 15:37:27 +0100    comment out old commands (James Richardson)
2012-07-31 15:34:39 +0100    add documentation (James Richardson)
2012-07-31 15:15:43 +0100    added debugging (James Richardson)
2012-07-31 07:06:01 +0100    always allow players to enter the main world (James Richardson)
2012-07-31 06:45:41 +0100    mass cleanup (James Richardson)
2012-07-31 06:43:36 +0100    changed my mind and moved it into World (James Richardson)
2012-07-31 06:40:39 +0100    implement isolated chat (James Richardson)
2012-07-31 06:08:16 +0100    remove old style methods (James Richardson)
2012-07-31 06:07:12 +0100    now check to see if a world is loaded when deserialising this will enable transparent enabling of main worlds (James Richardson)
2012-07-31 05:47:44 +0100    remove database handler (James Richardson)
2012-07-31 05:47:24 +0100    remove WorldListener (James Richardson)
2012-07-31 05:46:52 +0100    remove WorldRecord (yaml storage now) (James Richardson)
2012-07-31 05:46:31 +0100    implementing new world manager (James Richardson)

v2.1.0
2012-06-16 00:47:07 +0100    Finished debugging (James Richardson)
2012-06-16 00:21:07 +0100    added Permissions to all commands (James Richardson)
2012-06-16 00:02:57 +0100    added localisation (James Richardson)
2012-06-16 00:02:37 +0100    code clean up (James Richardson)
2012-06-16 00:01:39 +0100    some feature removed to get the plugin released tonight (James Richardson)
2012-06-15 23:16:06 +0100    finished updating creation commands (James Richardson)
2012-06-15 22:32:40 +0100    beginning to convert DD to new library (James Richardson)
2012-03-07 21:29:39 +0000    updated readme (James Richardson)

v2.0.3
2012-02-02 03:16:15 +0000    updated POM to reflect correct github location (James Richardson)