@@ -1,5 +1,6 @@
 Changelog for DimensionDoor (v2.1.1-SNAPSHOT)
 
+2012-07-31 16:41:16 +0100    using wrong constructor (James Richardson)
 2012-07-31 16:36:26 +0100    add toString - add forgotten fields (James Richardson)
 2012-07-31 15:44:41 +0100    add default configuration (James Richardson)
 2012-07-31 15:37:27 +0100    comment out old commands (James Richardson)
